syntax = "proto3";
package pipe.plugins.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/plugins/pipe";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "github.com/solo-io/gloo/projects/gloo/api/v1/plugins/service_spec.proto";

// Pipe upstreams are used to route request to services listening at a Unix Domain Socket.
// Pipe upstreams can be used to proxy any kind of service, and therefore contain a ServiceSpec
// for additional service-specific configuration.
// Unlike upstreams created by service discovery, Pipe Upstreams must be created manually by users
message UpstreamSpec {
    
    // The Unix Domain Socket path.
    string path = 1;

    // An optional Service Spec describing the service listening at this address
    .plugins.gloo.solo.io.ServiceSpec service_spec = 2;
}
